--- a/notebooks/build_embeddings.ipynb
+++ b/notebooks/build_embeddings.ipynb
@@ -21,30 +21,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['ISBN', 'title', 'subtitle', 'authors', 'publisher', 'publishedDate',\n",
-       "       'description', 'pageCount', 'maturityRating', 'language', 'categories',\n",
-       "       'ratingsCount', 'averageRating', 'textSnippet', 'categories_list',\n",
-       "       'category_embeddings'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "books.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -71,10 +47,8 @@
     }
    ],
    "source": [
-    "# Fill missing categories with a placeholder\n",
+    "# Fill missing categories with a placeholder and split them into lists \n",
     "books['categories'] = books['categories'].fillna(\"unknown\")\n",
-    "\n",
-    "# Split categories into lists\n",
     "books['categories_list'] = books['categories'].apply(lambda x: [cat.strip() for cat in x.split(\",\")])\n",
     "books['categories_list']"
    ]
@@ -91,9 +65,8 @@
     "def embed_categories(categories_list):\n",
     "    embeddings = []\n",
     "    for category in categories_list:\n",
-    "        # Convert category to lowercase\n",
     "        category = category.lower()\n",
-    "        # Split into individual words\n",
+    "        # split into individual words\n",
     "        words = category.split()\n",
     "        word_embeddings = []\n",
     "        for word in words:\n",
@@ -103,13 +76,14 @@
     "                word_embeddings.append(word_embeddings[-1])\n",
     "            else:  # If no valid embedding exists, append a zero vector\n",
     "                word_embeddings.append(np.zeros(100))\n",
-    "        # Average word embeddings within the category\n",
+    "\n",
+    "        # average word embeddings within the category\n",
     "        curr_emb = np.mean(word_embeddings, axis=0) if word_embeddings else np.zeros(100)\n",
     "        embeddings.append(curr_emb)\n",
-    "    # Average embeddings across all categories for a book\n",
+    "\n",
+    "    # average embeddings across all categories for a book\n",
     "    return np.mean(embeddings, axis=0) if embeddings else np.zeros(100)\n",
     "\n",
-    "# Apply embedding function to categories\n",
     "books['category_embeddings'] = books['categories_list'].apply(embed_categories)\n"
    ]
   },
@@ -161,7 +135,7 @@
    "outputs": [],
    "source": [
     "def combine_text(row):\n",
-    "    # Combine title, subtitle, and description with proper handling of missing values\n",
+    "    # combine title, subtitle, and description with proper handling of missing values\n",
     "    return ' '.join(filter(None, [\n",
     "        str(row.get('title', '')).strip(),\n",
     "        str(row.get('subtitle', '')).strip(),\n",
@@ -327,20 +301,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm import tqdm  # For progress bar\n",
-    "\n",
     "def get_batch_embeddings(batch_texts):\n",
-    "    # Tokenize a batch of texts\n",
     "    inputs = tokenizer(\n",
     "        batch_texts,\n",
     "        return_tensors='pt',\n",
     "        truncation=True,\n",
     "        padding='max_length',\n",
-    "        max_length=512  # Adjust max length based on your text size\n",
+    "        max_length=512  \n",
     "    )\n",
     "    with torch.no_grad():\n",
     "        outputs = model(**inputs)\n",
-    "    # Mean pooling for dense embedding\n",
+    "\n",
     "    embeddings = outputs.last_hidden_state.mean(dim=1)\n",
     "    return embeddings\n"
    ]
@@ -362,23 +333,19 @@
     "from torch.utils.data import DataLoader\n",
     "from tqdm import tqdm\n",
     "\n",
-    "# Parameters\n",
-    "batch_size = 32  # Adjust based on available GPU/CPU memory\n",
+    "batch_size = 32  \n",
     "\n",
-    "# Create a DataLoader for batch processing\n",
     "dataloader = DataLoader(\n",
     "    books['combined_text'].tolist(),\n",
     "    batch_size=batch_size,\n",
     "    shuffle=False\n",
     ")\n",
     "\n",
-    "# Generate embeddings in batches\n",
     "all_embeddings = []\n",
     "for batch_texts in tqdm(dataloader, desc='Generating embeddings'):\n",
     "    batch_embeddings = get_batch_embeddings(batch_texts)\n",
     "    all_embeddings.append(batch_embeddings)\n",
     "\n",
-    "# Concatenate all embeddings into a single tensor\n",
     "text_embeddings_tensor = torch.cat(all_embeddings)"
    ]
   },
@@ -389,17 +356,10 @@
    "outputs": [],
    "source": [
     "torch.save({\n",
-    "    'ISBNs': books['ISBN'].values,  # Save the ISBNs for mapping later\n",
+    "    'ISBNs': books['ISBN'].values, \n",
     "    'embeddings': text_embeddings_tensor\n",
     "}, 'book_text_embeddings_bge.pt')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
